@@ -1,3 +1,6 @@
+2005-08-12 15:25  Andrej Kacian <andrej@kacian.sk>
+	* src: clientops.c: Handle unsuccesful channel join.
+
 2005-08-10 21:00  Andrej Kacian <andrej@kacian.sk>
 	* src: silc.h, clientops.c, silc-client.c, clientops-notify.c: Use
 	       irssi2 macros for event key names where possible.
